# Software-Analysis-Studio

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Dockerfile  Makefile  cmake_install.cmake  icfg.dot
.github/workflows/: docker-publish.yml
Assignment-1/: Assignment-1.cpp  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Assignment-2/: Assignment-2.cpp  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Assignment-2/test-exes/: Test.cpp
Assignment-3/: Assignment-3.cpp  CTestTestfile.cmake  Makefile  cmake_install.cmake
Assignment-4/: Assignment-4.cpp  CTestTestfile.cmake  Makefile  cmake_install.cmake
CodeGraph/: CTestTestfile.cmake  Makefile  cmake_install.cmake
HelloWorld/: CTestTestfile.cmake  Makefile  cmake_install.cmake
